--- a/index.html
+++ b/index.html
@@ -8,14 +8,21 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 <body>
-    <article class="wrapper">
-        <div class="container">
-            <section class="featured">
+    <main class="wrapper">
+         <section class="featured">
+            <div class="container">
                 <h2 class="featured__title title">Featured images</h2>
                 <div class="featured__slider">
+                    <div class="slider__arrows">
+                        <div class="arrow__back"></div>
+                        <div class="arrow__next"></div>
+                    </div>
+                    <div class="slider__block"></div>
                 </div>
-            </section>
-            <section class="last">
+            </div>
+        </section>
+        <section class="last">
+            <div class="container">
                 <h2 class="last__title title">Last images</h2>
                 <div class="last__wrapper">
                     <div class="last__block">
@@ -24,9 +31,10 @@
                     BANNER
                     </div>
                 </div>
-            </section>
+            </div>
+        </section>
         </div>
-    </article>
+    </main>
     <script src="./script.js"></script>
 </body>
 </html>
