--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
                         <div class="arrow__back"></div>
                         <div class="arrow__next"></div>
                     </div>
-                    <div class="slider__block"></div>
+                    <div class="slider__block">
+                        
+                    </div>
                 </div>
             </div>
         </section>
@@ -26,6 +28,7 @@
                 <h2 class="last__title title">Last images</h2>
                 <div class="last__wrapper">
                     <div class="last__block">
+ 
                      </div>
                     <div class="last__banner">
                     BANNER
